<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_car"
    android:layout_width="match_parent"
    android:layout_height="140dp"
    android:layout_marginLeft="12dp"
    android:layout_marginTop="10dp"
    android:layout_marginRight="12dp"
    android:clickable="true"
    android:foreground="?selectableItemBackground"
    card_view:cardBackgroundColor="@color/superCarCard"
    card_view:cardCornerRadius="20dp"
    card_view:contentPadding="7dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/carIV"
            android:layout_width="107dp"
            android:layout_height="121dp"
            android:contentDescription="@string/car_preview"
            android:foreground="@drawable/rounded_fg"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"
            card_view:srcCompat="@drawable/ic_launcher_background" />

        <TextView
            android:id="@+id/brandTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/brand"
            android:textSize="30sp"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toEndOf="@+id/carIV"
            card_view:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/horsePowerTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:text="@string/horsepower"
            android:textSize="22sp"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintStart_toEndOf="@+id/engineTypeTV"
            tools:layout_editor_absoluteY="91dp" />

        <TextView
            android:id="@+id/modelTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/car_model"
            android:textSize="20sp"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toStartOf="@+id/favoriteBTN"
            card_view:layout_constraintStart_toEndOf="@+id/carIV"
            card_view:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/engineCapacityTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/engine_capacity_example"
            android:textSize="22sp"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintStart_toEndOf="@+id/carIV" />

        <TextView
            android:id="@+id/engineTypeTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/engine_type_example"
            android:textSize="22sp"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintStart_toEndOf="@+id/engineCapacityTV"
            tools:layout_editor_absoluteY="91dp" />

        <Button
            android:id="@+id/favoriteBTN"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginEnd="4dp"
            android:background="@drawable/ic_baseline_favorite_orange_24"
            android:text=""
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"
            card_view:layout_constraintVertical_bias="0.505" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>